--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       padding: 0;
     }
     header {
-      background-color: #ff7043;
+      background-color: rgb(105, 167, 222);
       color: white;
       text-align: center;
       padding: 1rem 0;
@@ -27,7 +27,7 @@
       width: 60%;
       max-width: 400px;
       font-size: 1rem;
-      border: 2px solid #ff7043;
+      border: 2px solid rgb(105, 167, 222);
       border-radius: 5px;
     }
     .recipes {
@@ -62,7 +62,7 @@
     .card-body button {
       margin-top: 0.5rem;
       padding: 0.5rem 1rem;
-      background-color: #ff7043;
+      background-color: rgb(105, 167, 222);
       border: none;
       color: white;
       border-radius: 5px;
